--- a/index.html
+++ b/index.html
@@ -40,7 +40,11 @@
                         <h6>2-MONTHS PRACTICAL TRAINING</h6>
                         <h1>Advance training
                         on UIUX design for product managers</h1>
-                        <p>TRAINING FEE: <b>₦50,000 </b> <span>+</span> CLASS STARTS MAY</p>
+                        <div class="smallContent"><p>TRAINING FEE: <b>₦50,000 </b></p> 
+                            <svg class="mx-1" height="6" width="6">
+                                <circle cx="3" cy="3" r="2" fill="#FCD900" />
+                            </svg>
+                            <p> CLASS STARTS MAY</p></div>
                         <a href="#">Join the waiting list</a>
                     </div>
                     <div class="col-md-6 hero-img mt-5 mt-md-0 d-flex justify-content-center justify-content-md-end">
@@ -59,3 +63,4 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
 </body>
 </html>
+
