added whatsapp link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
 
             <div class="footer_cta d-flex justify-content-center">
-                <a href="#">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
+                <a href="https://wa.me/8135369680?text=Hi%20Perxels%2C%20am%20interested%20in%20the%20Advance%20training%20on%20Ui%2FUx%20design%20for%20product%20managers.%0AWhat%20is%20the%20next%20step%3F">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
             </div>
         </div>
     </section>
