--- a/index.html
+++ b/index.html
@@ -58,9 +58,60 @@
             </div>
         </div>
     </section>
+    <section class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="video d-flex justify-content-center align-items-center">
+                        <img src="./assets/images/playButton.svg" alt="play button">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <h2>Develop your Design Intuition</h2>
+                    <div class="product_span">AS A PRODUCT MANAGER</div>
+                    <h4>Practical training on:</h4>
+                    <ul>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Wireframming</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Information Architecture</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Principle of Product Design</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Principle of Interface Design</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Understanding Figma Tool</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Practical design classes</li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="videoOverlay">
+                <video id="videoControl" controls>
+                    <source src="https://res.cloudinary.com/perxels/video/upload/v1618947275/Perxels%20Advance/VID-20210420-WA0032_ufwjpl.mp4" type="video/mp4">
+                    Your browser does not support the video tag.
+                  </video>
+            </div>
+
+            <div class="mt-5 d-flex justify-content-center">
+                <a class="button" href="#">Join the waiting list</a>
+            </div>
+            <div class="buttom_content mt-5 text-center">Copyright 2021</div>
+        </div>
+    </section>
 
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script>
+    let videoOverlay = document.querySelector('.videoOverlay');
+    let video = document.querySelector('.video');
+    let videoControl = document.getElementById('videoControl');
+
+    video.addEventListener('click', () => {
+        videoOverlay.classList.add('active');
+    })
+
+    videoOverlay.addEventListener('click', () => {
+        videoOverlay.classList.remove('active');
+        videoControl.pause();
+    })
+
+</script>
 </body>
 </html>
 
