changed play icon color

--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
 
     video.addEventListener('click', () => {
         videoOverlay.classList.add('active');
+        videoControl.play();
     })
 
     videoOverlay.addEventListener('click', () => {
