made some changes based on what we discussed on the meeting

--- a/index.html
+++ b/index.html
@@ -30,22 +30,22 @@
     <section class="hero">
         <div class="container">
             <header>
-                <a href="#" target="_blank" rel="noopener noreferrer">
+                <a href="https://perxels.com" target="_blank" rel="noopener noreferrer">
                     <img src="./assets/images/logo.svg" alt="perxels logo">
                 </a>
             </header>
             <div class="hero-content">
                 <div class="row">
                     <div class="col-md-6 content d-flex align-items-start flex-column justify-content-center">
-                        <h6>2-MONTHS PRACTICAL TRAINING</h6>
+                        <h6>4 WEEKS PRACTICAL TRAINING</h6>
                         <h1>Advance training
                         on UIUX design for product managers</h1>
-                        <div class="smallContent"><p>TRAINING FEE: <b>₦50,000 </b></p> 
+                        <div class="smallContent"><p>TRAINING FEE: <b>₦30,000 </b></p> 
                             <svg class="mx-1" height="6" width="6">
                                 <circle cx="3" cy="3" r="2" fill="#FCD900" />
                             </svg>
-                            <p> CLASS STARTS MAY</p></div>
-                        <a href="#">Join the waiting list</a>
+                            <p> CLASS STARTS IN MAY</p></div>
+                        <a href="https://forms.gle/LxpmV1rbDKmGVzsdA">Join the waiting list</a>
                     </div>
                     <div class="col-md-6 hero-img mt-5 mt-md-0 d-flex justify-content-center justify-content-md-end">
                         <img src="./assets/images/illustration.png" alt="illustration">
@@ -54,7 +54,7 @@
             </div>
 
             <div class="footer_cta d-flex justify-content-center">
-                <a href="https://wa.me/8135369680?text=Hi%20Perxels%2C%20am%20interested%20in%20the%20Advance%20training%20on%20Ui%2FUx%20design%20for%20product%20managers.%0AWhat%20is%20the%20next%20step%3F">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
+                <a href="https://wa.me/2348135369680?text=Hi%20Perxels%2C%20am%20interested%20in%20the%20Advance%20training%20on%20Ui%2FUx%20design%20for%20product%20managers.%0AWhat%20is%20the%20next%20step%3F">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
             </div>
         </div>
     </section>
@@ -71,12 +71,11 @@
                     <div class="product_span">AS A PRODUCT MANAGER</div>
                     <h4>Practical training on:</h4>
                     <ul>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Wireframming</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Information Architecture</li>
                         <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Principle of Product Design</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Principle of Interface Design</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Understanding Figma Tool</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Practical design classes</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> How Typeface,Color, Hierarchy Affects User Experience</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Practical Training on wireframing</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> In Depth training on Information architecture and User Flow</li>
+                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> How to work effectively with a design team (Understanding the language of designers)</li>
                     </ul>
                 </div>
             </div>
@@ -89,9 +88,9 @@
             </div>
 
             <div class="mt-5 d-flex justify-content-center">
-                <a class="button" href="#">Join the waiting list</a>
+                <a class="button" href="https://forms.gle/LxpmV1rbDKmGVzsdA">Join the waiting list</a>
             </div>
-            <div class="buttom_content mt-5 text-center">Copyright 2021</div>
+            <div class="buttom_content mt-5 text-center">Copyright © 2021 Perxels</div>
         </div>
     </section>
 
