--- a/index.html
+++ b/index.html
@@ -24,93 +24,156 @@
     <meta name="msapplication-TileImage" content="./assets/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#34296B">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
     <section class="hero">
         <div class="container">
             <header>
-                <a href="https://perxels.com" target="_blank" rel="noopener noreferrer">
-                    <img src="./assets/images/logo.svg" alt="perxels logo">
-                </a>
+                Archieverr in partnership with Perxels
             </header>
             <div class="hero-content">
                 <div class="row">
                     <div class="col-md-6 content d-flex align-items-start flex-column justify-content-center">
-                        <h6>4 WEEKS PRACTICAL TRAINING</h6>
-                        <h1>Advance training
-                        on UIUX design for product managers</h1>
-                        <div class="smallContent"><p>TRAINING FEE: <b>₦30,000 </b></p> 
-                            <svg class="mx-1" height="6" width="6">
-                                <circle cx="3" cy="3" r="2" fill="#FCD900" />
-                            </svg>
-                            <p> CLASS STARTS IN MAY</p></div>
-                        <a href="https://forms.gle/LxpmV1rbDKmGVzsdA">Join the waiting list</a>
+                        <h6>8 WEEKS PRACTICAL TRAINING</h6>
+                        <h1>Become a Certified
+                            Product Manager</h1>
+                        <p class="smalltext">
+                            Learn to build products that not only solve problems 
+                            but also delights users, while increasing business 
+                            value and helping your organisation thrive.
+                        </p>
+                        <a href="./register.html">Sign up for July Cohort</a>
                     </div>
                     <div class="col-md-6 hero-img mt-5 mt-md-0 d-flex justify-content-center justify-content-md-end">
                         <img src="./assets/images/illustration.png" alt="illustration">
                     </div>
                 </div>
             </div>
-
-            <div class="footer_cta d-flex justify-content-center">
-                <a href="https://wa.me/2348135369680?text=Hi%20Perxels%2C%20am%20interested%20in%20the%20Advance%20training%20on%20Ui%2FUx%20design%20for%20product%20managers.%0AWhat%20is%20the%20next%20step%3F">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
-            </div>
         </div>
     </section>
     <section class="about">
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
-                    <div class="video d-flex justify-content-center align-items-center">
-                        <img src="./assets/images/playButton.svg" alt="play button">
-                    </div>
+            <h2>HOW IT WORKS</h2>
+            <div class="grid">
+                <img data-aos="fade-right"
+                data-aos-delay="200"
+                data-aos-easing="ease-in-sine" src="./assets//images/archiver.png" alt="archiver">
+                <div data-aos="fade-up"
+                data-aos-delay="400"
+                data-aos-easing="ease-in-sine" class="box primary">
+                    <div class="title">Sign Up  For a Cohort</div>
+                    <div class="content">Join the next cohort to begin your product 
+                        management in-depth training and mentorship.</div>
                 </div>
-                <div class="col-md-6">
-                    <h2>Develop your Design Intuition</h2>
-                    <div class="product_span">AS A PRODUCT MANAGER</div>
-                    <h4>Practical training on:</h4>
-                    <ul>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Principle of Product Design</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> How Typeface,Color, Hierarchy Affects User Experience</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> Practical Training on wireframing</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> In Depth training on Information architecture and User Flow</li>
-                        <li><img src="./assets/images/checkmark.svg" alt="checkmark"> How to work effectively with a design team (Understanding the language of designers)</li>
-                    </ul>
+                <div data-aos="fade-up"
+                data-aos-delay="600"
+                data-aos-easing="ease-in-sine" class="box">
+                    <div class="title">Get a One-One Training</div>
+                    <div class="content">The course runs for 8 weeks with 
+                        2 classes per week. Each class runs for an hour. </div>
                 </div>
+                <div data-aos="fade-up"
+                data-aos-delay="800"
+                data-aos-easing="ease-in-sine" class="box">
+                    <div class="title">Work on a Capstone Project</div>
+                    <div class="content">Put the knowledge you are learning into 
+                        practical use and build a product from discovery to launch.</div>
+                </div>
+                <div data-aos="fade-up"
+                data-aos-delay="1000"
+                data-aos-easing="ease-in-sine" class="box">
+                    <div class="title">Exposure to Internship Opportunity</div>
+                    <div class="content">Get first-hand information on internship 
+                        opportunities to utilise your skills and gain real-life experience</div>
+                </div>  
             </div>
-
-            <div class="videoOverlay">
-                <video id="videoControl" controls>
-                    <source src="https://res.cloudinary.com/perxels/video/upload/v1618995641/Perxels%20Advance/Product_Manager_Call_out_U_cb6wnf.mp4" type="video/mp4">
-                    Your browser does not support the video tag.
-                  </video>
-            </div>
-
-            <div class="mt-5 d-flex justify-content-center">
-                <a class="button" href="https://forms.gle/LxpmV1rbDKmGVzsdA">Join the waiting list</a>
-            </div>
-            <div class="buttom_content mt-5 text-center">Copyright © 2021 Perxels</div>
         </div>
     </section>
 
+    <a class="download" href="./assets/Perxels_PM_Course_Outline.pdf">
+        DOWNLOAD THE SYLLABUS
+    </a>
+
+    <div class="price">
+        <div class="container">
+            <div class="price-wrapper">
+                <div class="price-range">
+                    <h5>COURSE FEE</h5>
+                    <div class="fee">₦105,000</div>
+                    <h5>INSTEAD OF <s>₦150,000</s></h5>
+                </div>
+
+                <h6>INSTALLMENT PAYMENT IS ALLOWED</h6>
+
+                <div class="two-grid">
+                    <div class="main">
+                        <h1>70%</h1>
+                        <p>ON ADMISSION</p>
+                    </div>
+                    <div class="main">
+                        <h1>30%</h1>
+                        <p>AFTER 4WEEKS OF 
+                        INITIAL PAYMENT </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="testimonial">
+        <h2>WHAT OUR STUDENTS SAYS</h2>
+
+        <div class="content">
+            <div class="box">
+                <img src="./assets/images/lucky.png" alt="jeff">
+                <div class="name">
+                    Lucky Bardeson
+                </div>
+                <div class="text">
+                    I like how structured and practical the classes have been. 
+                    I have been able to get more grounded knowledge on product management. <br />
+                    Despite coming from a technical background, I was able to relate with the 
+                    lessons due to the approach of the instructor teaching from his personal 
+                    experience as a product manager.
+                    The instructor is someone who is open: he not only teaches, he also listens 
+                    and wants to hear my opinions which makes it more relatable to me personally.
+                </div>
+            </div>
+            <div class="box">
+                <img src="./assets/images/jef.png" alt="jeff">
+                <div class="name">
+                    Yemi Jeff
+                </div>
+                <div class="text">
+                    The product management course at Perxels was an interesting experience for me. 
+                    Without any experience in the tech space, I was able to understand the role of a 
+                    product manager in simple and clear terms along with the primary and secondary 
+                    functions of a product manager. <br />
+                    The process of building my capstone project is one that thrilled me also because 
+                    I was able to practically put into practice what I had been learning.
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <footer>
+        <div class="container">
+            <div class="mt-5 d-flex justify-content-center">
+                <a class="button" href="./register.html">Join the waiting list</a>
+            </div>
+            <div class="footer_cta d-flex justify-content-center">
+                <a href="https://wa.me/2348135369680?text=Hi%20Perxels%2C%20am%20interested%20in%20the%20Advance%20training%20on%20Ui%2FUx%20design%20for%20product%20managers.%0AWhat%20is%20the%20next%20step%3F">Talk to us on whatsapp <img src="./assets/images/whatsapp.svg" alt="whatsapp icon"></a>
+            </div>
+        </div>
+    </footer>
+
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
+<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 <script>
-    let videoOverlay = document.querySelector('.videoOverlay');
-    let video = document.querySelector('.video');
-    let videoControl = document.getElementById('videoControl');
-
-    video.addEventListener('click', () => {
-        videoOverlay.classList.add('active');
-        videoControl.play();
-    })
-
-    videoOverlay.addEventListener('click', () => {
-        videoOverlay.classList.remove('active');
-        videoControl.pause();
-    })
-
+    AOS.init();
 </script>
 </body>
 </html>
