added new changes

--- a/register.html
+++ b/register.html
@@ -31,6 +31,7 @@
         <a href="./index.html" class="bg"></a>
         <div class="box">
             <form id="form">
+                <h2>Sign up for the waiting list.</h2>
                 <div class="input-group">
                     <label>Name</label>
                     <input id="name" name="name" type="text" required>
